# fastfluence-vue

./: .env.example  Caddyfile  Development Setup  Dockerfile.caddy  Funkcjonalności do dodania:  README.md  SENDGRID_SETUP.md  Struktura bazy danych  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  auth0.py  config.py  database.py  deps.py  email.py  main.py  models.py  schemas.py
backend/app/routers/: applications.py  auth.py  campaigns.py  creators.py  users.py
backend/tests/: conftest.py  test_auth.py  test_campaigns.py  test_creators.py  test_email.py  test_users.py
frontend/: .env  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/styles/: main.css
frontend/src/components/: AuthLogin.vue  AuthRegister.vue  BtnCta.vue  CampaignCard.vue  CampaignForm.vue  CreatorCard.vue  HeroCircles.vue  ModalBase.vue  Navbar.vue  RangeSlider.vue  SearchBar.vue  TableBase.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  auth0.ts  campaigns.ts
frontend/src/types/: index.ts
frontend/src/views/: ActivateAccount.vue  AddCampaign.vue  Auth0Callback.vue  CampaignDetails.vue  Dashboard.vue  Landing.vue  Login.vue  NotFound.vue  Profile.vue  Register.vue
