[project]
name = "fastfluence-backend"
version = "0.1.0"
description = "FastFluence backend API"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12,<4.0"

dependencies = [
  "fastapi>=0.104.1,<1.0.0",
  "uvicorn>=0.24.0,<1.0.0",
  "sqlmodel>=0.0.14,<0.1.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-multipart>=0.0.6,<0.1.0",
  "pydantic[email]>=2.5.0,<3.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "sendgrid>=6.12.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3,<8.0.0",
  "pytest-asyncio>=0.21.1,<1.0.0",
  "httpx>=0.25.2,<0.26.0",
]

# Możesz zostawić build-backend z poetry-core — nie wymaga zainstalowanego Poetry.
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.uv]
package = false
